--- a/src/app/features/mortgage-details/pages/edit-mortgage-detail/edit-mortgage-detail.component.html
+++ b/src/app/features/mortgage-details/pages/edit-mortgage-detail/edit-mortgage-detail.component.html
@@ -1,5 +1,5 @@
-  <h2 mat-dialog-title>
-    Edit mortgagedetails{{ mortgageId }}
+  <h2 mat-dialog-title align="center">
+    Edit mortgage details
   </h2>
 
   <mat-divider></mat-divider>
