--- a/src/app/features/mortgage-details/pages/mortgage-detail/mortgage-detail.component.html
+++ b/src/app/features/mortgage-details/pages/mortgage-detail/mortgage-detail.component.html
@@ -32,7 +32,10 @@
               <h4 mat-line>Valuation: {{ item.amount }}</h4>
               <h4 mat-line>Date: {{ item.engDate | date }}</h4>
               <h4 mat-line>Interest: Rs. {{ interest }}</h4>
-              <h4 mat-line>
+              <h4 mat-line *ngIf="item.interestReceivedCollection[0] == null">
+                Interest Received: <strong>Not recieved interest yet.</strong>
+              </h4>
+              <h4 mat-line *ngIf="item.interestReceivedCollection[0] != null">
                 Interest Received: Rs.
                 {{ item.interestReceivedCollection[0].amount }}
               </h4>
@@ -41,13 +44,13 @@
           <mat-divider></mat-divider>
         </mat-list>
       </mat-card-content>
-      <mat-card-actions>
+      <!-- <mat-card-actions>
         <button mat-button (click)="goToList()">
           <mat-icon aria-label="arrow back" color="primary"
             >arrow_back</mat-icon
           >
         </button>
-      </mat-card-actions>
+      </mat-card-actions> -->
     </mat-card>
   </section>
 </div>
@@ -116,6 +119,7 @@
             [enableDelete]
             (edit)="onEdit(row.mortDetId, row.amount, row.status)"
             (add)="onAdd()"
+            (delete)="onDelete(row)"
           ></ganapati-action-buttons>
         </td>
       </ng-container>
