--- a/src/app/features/mortgage-details/shared/mortgage-detail-form/mortgage-detail-form.component.html
+++ b/src/app/features/mortgage-details/shared/mortgage-detail-form/mortgage-detail-form.component.html
@@ -31,7 +31,7 @@
         <!-- amount -->
         <mat-card-content>
           <div class="row">
-            <div class="col-md-6 col-sm-6 mx-auto mt-4 ">
+            <div class="col-md-6 col-sm-6 mx-auto mt-4">
               <mat-form-field class="example-full-width">
                 <input
                   matInput
@@ -41,8 +41,10 @@
                   id="amount"
                 />
                 <mat-hint align="end">Enter amount paid to customer.</mat-hint>
-                <!-- <mat-error *ngIf="hasError('quantity', 'required')">Quantity is required</mat-error>
-             <mat-error *ngIf="hasError('quantity', 'maxlength')">You have more than 25 characters</mat-error>-->
+                <mat-error
+                  *ngIf="motrgageDetailForm.controls['amount'].invalid"
+                  >{{ getAmountErrorMessage() }}</mat-error
+                >
               </mat-form-field>
             </div>
           </div>
@@ -57,6 +59,10 @@
                   <mat-option value="R">recieved</mat-option>
                 </mat-select>
                 <mat-hint align="end"></mat-hint>
+                <mat-error
+                  *ngIf="motrgageDetailForm.controls['status'].invalid"
+                  >{{ getStatusErrorMessage() }}</mat-error
+                >
               </mat-form-field>
             </div>
           </div>
@@ -74,8 +80,10 @@
                   required
                 />
                 <mat-hint align="end">Amount given to the client</mat-hint>
-                <!--        <mat-error *ngIf="hasError('address', 'required')">Address is required</mat-error>-->
-                <!--          <mat-error *ngIf="hasError('address', 'maxlength')">You have more than 100 characters</mat-error>-->
+                <mat-error
+                *ngIf="motrgageDetailForm.controls['rate'].invalid"
+                >{{ getRateErrorMessage() }}</mat-error
+              >
               </mat-form-field>
             </div>
           </div>
@@ -84,11 +92,10 @@
           <div class="row">
             <div class="col-md-6 col-sm-6 mx-auto">
               <mat-form-field class="example-full-width">
-                <!-- <mat-label>Angular forms (w/ deserialization)</mat-label> -->
+                <mat-label>Date</mat-label>
                 <input
                   matInput
                   [matDatepicker]="picker2"
-                  [formControl]="serializedDate"
                   formControlName="nepDate"
                 />
                 <mat-datepicker-toggle
@@ -96,11 +103,16 @@
                   [for]="picker2"
                 ></mat-datepicker-toggle>
                 <mat-datepicker #picker2></mat-datepicker>
+                <mat-hint align="end">Date of transaction.(B.S)</mat-hint>
+                <mat-error
+                  *ngIf="motrgageDetailForm.controls['nepDate'].invalid"
+                  >{{ getNepaliDateErrorMessage() }}</mat-error
+                >
               </mat-form-field>
             </div>
           </div>
         </mat-card-content>
-        <mat-divider></mat-divider>
+        <!-- <mat-divider></mat-divider> -->
 
         <!-- save/cancel  -->
         <div class="row">
