--- a/src/app/features/page-not-found/pages/page-not-found/page-not-found.component.html
+++ b/src/app/features/page-not-found/pages/page-not-found/page-not-found.component.html
@@ -1,1 +1,11 @@
-<p>page-not-found works!</p>
+<div class="body-content error-404">
+  <div class="content-wrapper">
+    <i class="flaticon-computer"></i>
+    <h1>Error 404</h1>
+    <h3>Oops! Page Not Found!</h3>
+    <p>The link you followed may be broken, or the page has been removed</p>
+    <a routerLink="/ganapati/home" class="btn btn-white">
+      <i class="material-icons">arrow_back</i> Back Home</a
+    >
+  </div>
+</div>
