--- a/src/app/core/components/page-not-found/page-not-found.component.html
+++ b/src/app/core/components/page-not-found/page-not-found.component.html
@@ -1,1 +1,15 @@
-<p>page-not-found works!</p>
+<div class="body-content error-404">
+  <div class="content-wrapper ">
+    <mat-icon>desktop_windows</mat-icon>
+    <h1>Error 404</h1>
+    <h3>Oops! Page Not Found!</h3>
+    <p>The link you followed may be broken, or the page has been removed</p>
+    <button
+      mat-stroked-button
+      routerLink="/ganapati/customer"
+      style="color: white;"
+    >
+      Back Home
+    </button>
+  </div>
+</div>
