--- a/src/app/features/profile/pages/profile/profile.component.html
+++ b/src/app/features/profile/pages/profile/profile.component.html
@@ -1,1 +1,5 @@
-<p>profile works!</p>
+<div class="content-wrapper">
+  <!-- breadcrumb -->
+  <ganapati-breadcrumb></ganapati-breadcrumb>
+  Wel come to profile page.
+</div>
