--- a/src/app/core/components/page-not-found/page-not-found.component.html
+++ b/src/app/core/components/page-not-found/page-not-found.component.html
@@ -1,7 +1,7 @@
 <div class="body-content error-404">
-  <div class="content-wrapper ">
-    <mat-icon>desktop_windows</mat-icon>
-    <h1>Error 404</h1>
+  <div class="content-wrapper">
+    <mat-icon style="color: whitesmoke;">desktop_windows</mat-icon>
+    <h1 style="font-size: 2rem; font-weight: bold;">Error 404</h1>
     <h3>Oops! Page Not Found!</h3>
     <p>The link you followed may be broken, or the page has been removed</p>
     <button
